--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     </div>
     <div class="foot-panel4">
        
-                <a>Conditions of Use Privacy Notice Your Ads Privacy Choices</a>
+                <a>This is a personal project for learning purposes and not affiliated with Amazon</a>
            
            <p>
                 <i class="fa-solid fa-copyright"></i>1996-2023, Amazon.com , Inc. or its affiliates
